# openai-func-enums

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: .gitignore  Cargo.toml
examples/clap-integration/: Cargo.toml  build.rs
examples/clap-integration/src/: main.rs
examples/embedding/: function_embeddings.txt
examples/get-current-weather/: Cargo.toml  build.rs
examples/get-current-weather/src/: main.rs
openai-func-embeddings/: Cargo.toml
openai-func-embeddings/src/: lib.rs
openai-func-enums/: Cargo.toml  README.md
openai-func-enums-macros/: Cargo.toml
openai-func-enums-macros/src/: lib.rs
openai-func-enums/src/: lib.rs
