[package]
name = "openai-func-embeddings"
edition = "2021"
version = "0.4.0"
description = "A companion crate for async-openai to ease the composition of function calls by leveraging Rust's type system and enums."
license = "MIT"
repository = "https://github.com/frankfralick/openai-func-enums"
homepage = "https://github.com/frankfralick/openai-func-enums"

[dependencies]
async-openai = "0.19.0"
rkyv = { version = "0.7.44", features = ["validation"]}
tokio = { version = "1.25.0", features = ["sync"] }
