[package]
name = "openai-func-enums-macros"
version = "0.3.1"
authors = ["Frank Fralick <frankfralick@gmail.com>"]
description = "A companion crate for async-openai to ease the composition of function calls by leveraging Rust's type system and enums."
edition = "2021"
license = "MIT"
repository = "https://github.com/frankfralick/openai-func-enums"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
async-openai = "0.18.3"
openai-func-embeddings = { path = "../openai-func-embeddings", version = "0.3.1" }
proc-macro2 = "1.0.78"
quote = "1.0.35"
rkyv = { version = "0.7.44", features = ["validation"]}
syn = { version = "2.0.48", features = ["derive", "parsing"]}
tiktoken-rs = "0.4.2"
tokio = { version = "1.25.0", features = ["rt-multi-thread"]}

[features]
compile_embeddings_all = []
compile_embeddings_update = []
