[package]
name = "openai-func-enums"
version = "0.1.0"
authors = ["Frank Fralick <frankfralick@gmail.com>"]
keywords = ["openai", "async-openai", "ai"]
description = "A companion crate for async-openai to ease the composition of function calls by leveraging Rust's type system and enums."
edition = "2021"
license = "MIT"
repository = "https://github.com/frankfralick/openai-func-enums"
homepage = "https://github.com/frankfralick/openai-func-enums"
readme = "README.md"
keywords = ["openai", "async-openai", "enums", "function-calls"]
categories = ["api-bindings"]


[dependencies]
async-openai = "0.12.1"
openai-func-enums-macros = { path = "../openai-func-enums-macros", version = "0.1.0" }
proc-macro2 = "1.0.66"
quote = "1.0.31"
serde_json = "1.0.96"
