[package]
name = "openai-func-enums"
version = "0.2.3"
authors = ["Frank Fralick <frankfralick@gmail.com>"]
keywords = ["openai", "async-openai", "ai", "clap"]
description = "A companion crate for async-openai to ease the composition of function calls by leveraging Rust's type system and enums."
edition = "2021"
license = "MIT"
repository = "https://github.com/frankfralick/openai-func-enums"
homepage = "https://github.com/frankfralick/openai-func-enums"
readme = "README.md"
categories = ["api-bindings", "cli"]


[dependencies]
async-openai = "0.18.2"
async-trait = "0.1.72"
openai-func-enums-macros = { path = "../openai-func-enums-macros", version = "0.2.3" }
serde_json = "1.0.96"
