[package]
name = "clap-integration"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.18.2"
async-trait = "0.1.72"
clap = { version = "4.3.19", features = ["derive"] }
openai-func-enums = { path = "../../../openai-func-enums/openai-func-enums" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.4.2"
tokio = { version = "1.25.0", features = ["full"] }
