[package]
name = "get-current-weather"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.16.3"
openai-func-enums = { path = "../../../openai-func-enums/openai-func-enums" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.25.0", features = ["full"] }
